fix header on smallest screens

--- a/src/Player/Player.css
+++ b/src/Player/Player.css
@@ -8,7 +8,7 @@
     .player {
       float:left;
       margin-left: 10px;
-      width: calc(100% - 210px);
+      width: calc(100% - 80px);
     }
 }
 
